Fixing heading visibility

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -74,7 +74,7 @@ ul, ol {
  */
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
+    font-weight: bolder;
 }
 
 
